# AI-assignment

./: README.md
COMP6320-AI/COMP3620-6230-2017-Assignment-0-Python-Agent/: dfa.py  disease_scenario.py  health_agents.py  math_functions.py  newtest.py  part2_test.py  scenario1.results.json  scenario2.results.json  scenario3.results.json  scenario4.results.json  test.py  truth_tables.py
COMP6320-AI/COMP3620-6230-2017-Assignment-3-Automated-Planning/: hadm_evaluation.md  hff_evaluation.md
COMP6490-Document Analysis/IE-assignment/: Assignment.ipynb  Named_Entity_Extraction.ipynb  evaluate.py  features.py  ner-esp1.model  ner-esp2.model  report.html  report.md  spanish.txt
COMP6490-Document Analysis/Lab1/: report.md  report.md.html
COMP6490-Document Analysis/Lab3/: assignment-submission-notebook-bare.ipynb  tutorial1.py
COMP6490-Document Analysis/Lab4_nlp_assignment/: Main-checkpoint.ipynb  README.txt  report.html  (+4 more)
COMP8600-Machine Learning/: 00-background-work.ipynb  01-gradient-update-work.ipynb
COMP8620-Advanced AI/Assignment2/: CMakeLists.txt  Contribution.html  Contribution.md  agent.cpp  agent.hpp  aixi  cheesemaze.cpp  cheesemaze.hpp  environment.cpp  environment.hpp  grid.cpp  grid.hpp  main.cpp  main.hpp  maze1d.cpp  maze1d.hpp  predict.cpp  predict.hpp  rockpaperscissor.cpp  rockpaperscissor.hpp  search.cpp  tictactoe.cpp  tictactoe.hpp
COMP8620-Advanced AI/Assignment2/conf/: biased-rock-paper-scissor.conf  cheesemaze.conf  coinflip.conf  grid.conf  maze-1x4.conf  tictactoe.conf
COMP8650-advanced Machine Learning/: MaximumLikelihood.py  models.py
(+302 files in other folders)
